--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,19 @@ body {
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: Lato, Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 100;
 }
 
 h1 {
-  font-weight: 300;
   text-align: center;
 }
 
 ul {
   list-style: none;
+}
+
+section{
+  padding: 20px;
+  margin: 20px;
 }
